manifests/locust-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: locust-loadtest
  labels:
    app: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: locustio/locust:latest
        ports:
        - containerPort: 8089  # Default Locust Web UI port
        volumeMounts:
        - name: locust-file
          mountPath: /mnt/locust
        command: ["locust", "-f", "/mnt/locust/locustfile.py", "--host=http://flask.local"]
      volumes:
      - name: locust-file
        configMap:
          name: locust-config
---
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: locust-loadtest
spec:
  ports:
  - port: 8089
    targetPort: 8089
    protocol: TCP
  selector:
    app: locust
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  namespace: locust-loadtest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: locust.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: locust  # Service name correctly referenced
            port:
              number: 8089
